--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
         <module>dubbo-demo-provider</module>
         <module>dubbo-demo-api</module>
         <module>dubbo-demo-consumer</module>
+        <module>dubbo-demo-spring-boot</module>
     </modules>
 
     <groupId>com.lsm</groupId>
