--- a/dubbo-demo-spring-boot/pom.xml
+++ b/dubbo-demo-spring-boot/pom.xml
@@ -9,6 +9,10 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
+    <modules>
+        <module>dubbo-boot-provider</module>
+    </modules>
+
     <artifactId>dubbo-demo-spring-boot</artifactId>
     <packaging>pom</packaging>
 </project>
